force-app/main/default/objects/System_Tutorial__c/System_Tutorial__c.object-meta.xml
<CustomObject>
    <label>System Tutorial</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>System Tutorials Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Tutorials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>