force-app/main/default/objects/System_Tutorial__c/fields/Relevant_Too__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Too__c</fullName>
    <label>Relevant Too</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient Services</fullName>
            </value>
            <value>
                <fullName>Nursing</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>System Admins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>