force-app/main/default/objects/System_Tutorial__c/listViews/allSelection_System_Tutorial.listView-meta.xml
<ListView>
    <fullName>allSelection_System_Tutorial</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>